# CMakeList.txt : Top-level CMake project file, do global configuration
# and include sub-projects here.
#
cmake_minimum_required (VERSION 3.8)

project ("NewRepo")

# Include sub-projects.
#add_subdirectory ("test")
#add_subdirectory ("test1")
#add_subdirectory ("test2")
#add_subdirectory ("ObjectNamespaceDifferent")
#add_subdirectory ("ThisAndCtor")
#add_subdirectory ("Ctor")
#add_subdirectory ("Const")
#add_subdirectory ("Reference")
#add_subdirectory ("Typedef")
add_subdirectory ("Exception")
